@@ -36,5 +36,5 @@ Copyright \(co 2005 Michael Margraf <michael.margraf@alumni.tu-berlin.de>
 This is free software; see the source for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .SH AUTHORS
-Written by Toyoyuki Ishikawa <ishikawa@conceptkeeper.net> and Michael
+Written by Toyoyuki Ishikawa <toyoishi@gmail.com> and Michael
 Margraf <michael.margraf@alumni.tu-berlin.de>.
