@@ -59,12 +59,20 @@ TwistedPair::TwistedPair()
 		QObject::tr("diameter of conductor")));
   Props.append(new Property("D", "0.8 mm", true,
 		QObject::tr("diameter of wire (conductor and insulator)")));
-  Props.append(new Property("er", "4", false,
-		QObject::tr("dielectric constant of insulator")));
-  Props.append(new Property("T", "100", false,
-		QObject::tr("twists per length in 1/m")));
   Props.append(new Property("L", "1.5", true,
 		QObject::tr("physical length of the line")));
+  Props.append(new Property("T", "100", false,
+		QObject::tr("twists per length in 1/m")));
+  Props.append(new Property("er", "4", false,
+		QObject::tr("dielectric constant of insulator")));
+  Props.append(new Property("mur", "1", false,
+		QObject::tr("relative permeability of conductor")));
+  Props.append(new Property("rho", "0.022e-6", false,
+		QObject::tr("specific resistance of conductor")));
+  Props.append(new Property("tand", "4e-4", false,
+		QObject::tr("loss tangent")));
+  Props.append(new Property("Temp", "26.85", false,
+		QObject::tr("simulation temperature in degree Celsius")));
 }
 
 TwistedPair::~TwistedPair()
